# solen

./: .dev.vars.example  .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  EDGECLAW_AGENT_IMPROVEMENTS_SPEC.md  EDGECLAW_CREDENTIALS_SPEC.md  EDGECLAW_VPS_MIGRATION.md  README.md  ROADMAP.md  docker-compose.prod.yml  docker-compose.yml  edgeclaw-cli-spec.md  package-lock.json  package.json  wrangler.toml
.github/workflows/: ci.yml  deploy.yml
crates/agent-core/: Cargo.toml
crates/agent-core/src/: agent.rs  error.rs  lib.rs  llm.rs  permissions.rs  soul.rs  tools.rs  types.rs
crates/agent-core/src/builtins/: bash.rs  file_edit.rs  file_read.rs  file_write.rs  glob_tool.rs  grep_tool.rs  mod.rs
crates/credential-store/: Cargo.toml
crates/credential-store/src/: crypto.rs  error.rs  lib.rs  refresh.rs  store.rs  types.rs
crates/edgeclaw-cli/: Cargo.toml
crates/edgeclaw-cli/src/: main.rs  soul.rs
crates/edgeclaw-cli/src/chat/: connection.rs  mod.rs
crates/edgeclaw-cli/src/config/: connector.rs  edit.rs  mod.rs  set.rs  show.rs  types.rs  wizard.rs
crates/edgeclaw-server/: Cargo.toml
crates/edgeclaw-server/migrations/: 0002_credential_type.sql  0005_souls.sql
crates/edgeclaw-server/src/: agent.rs  builtin_executor.rs  handlers.rs  lib.rs  main.rs  oauth.rs  scheduler.rs  server.rs  session.rs  startup.rs
crates/edgeclaw-server/src/builtins/: memory.rs  mod.rs
crates/edgeclaw-server/tests/: integration.rs
crates/edgeclaw-worker/: Cargo.toml
crates/edgeclaw-worker/src/: lib.rs
crates/mcp-client/: Cargo.toml
crates/mcp-client/src/: client.rs
crates/skill-registry/: Cargo.toml
crates/skill-registry/src/: lib.rs
deploy/: Caddyfile  edgeclaw.service
docker/: Dockerfile.server  entrypoint.sh
docs/archive/: EDGECLAW_AGENT_IMPROVEMENTS_SPEC.md  EDGECLAW_CREDENTIALS_SPEC_CF.md  EDGECLAW_SPEC.md  EDGECLAW_SPEC_CF.md  EDGECLAW_TEMPORAL_KG_SPEC.md  EDGECLAW_TUI_SPEC_CF.md
docs/specs/: ARCHITECTURE.md  GAP.md  OVERVIEW.md  ROADMAP.md
skills/skill-github/: SKILL.md
skills/skill-gmail/: SKILL.md
skills/skill-google-calendar/: SKILL.md
skills/skill-http-fetch/: SKILL.md
skills/skill-memory/: SKILL.md
skills/skill-schedule/: Cargo.toml  SKILL.md  wrangler.toml
skills/skill-schedule/src/: lib.rs
skills/skill-web-search/: SKILL.md
tests/fixtures/: max_tokens_response.json  multi_tool_use_response.json  prompt_too_long_error.json
tests/integration/: agent.test.ts
