[workspace]
resolver = "2"
members = [
    "crates/agent-core",
    "crates/mcp-client",
    "crates/skill-registry",
    "crates/credential-store",
    "crates/edgeclaw-server",
    "crates/edgeclaw-cli",
    "skills/mcp-server-util",
    "skills/skill-memory",
    "skills/skill-web-search",
    "skills/skill-http-fetch",
    "skills/skill-schedule",
]
