[package]
name = "credential-store"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm     = "0.10"
ring        = "0.17"
rand        = { version = "0.8", features = ["getrandom"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "1"
zeroize     = { version = "1", features = ["derive"] }
sqlx        = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
sqlx  = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
