[package]
name = "edgeclaw-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "edgeclaw"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
edgeclaw-server = { path = "../edgeclaw-server" }
agent-core = { path = "../agent-core" }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
futures-util = "0.3"
crossterm = { version = "0.28", features = ["event-stream"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
toml = "0.8"
inquire = "0.7"
dirs = "6"

[dev-dependencies]
tempfile = "3"
