[package]
name = "edgeclaw-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-core = { path = "../agent-core" }
worker = { version = "0.7", features = ["http"] }  # spec says 0.5, but 0.7 required for wasm-bindgen compat
async-trait = "0.1"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
crate-type = ["cdylib"]
