[package]
name = "edgeclaw-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-core = { path = "../agent-core" }
mcp-client = { path = "../mcp-client" }
skill-registry = { path = "../skill-registry" }
worker = { version = "0.7", features = ["http"] }  # spec says 0.5, but 0.7 required for wasm-bindgen compat
async-trait = "0.1"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib"]
