[package]
name = "skill-registry"
version = "0.1.0"
edition = "2021"

[features]
native = ["agent-core/native", "mcp-client/native"]

[dependencies]
agent-core = { path = "../agent-core" }
mcp-client = { path = "../mcp-client" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
